# VKR_2026_ModelBase

./: .db_config.json  .gitignore  .venv_requirements_backup.txt  AGENTS.md  CLAUDE.md  ModelLine.code-workspace  ORDERBOOK_STEP1_NOTES.md  README.md  RESTRUCTURE_NOTES.md  STRUCTURE.md  build_market_dataset_to_postgres.py  catboost_backtest.py  data_pipeline.py  experiment_blocks.py  export_utils.py  extensions.txt  fix_allingest.ps1  model_baselines.py  model_baselines_catboost.py  model_baselines_lstmend.py  notebook-arima-sarima.ipynb  package-lock.json  paper_extracted.txt  promt_agent.md  test_fetch.py  timeseries_catboost_pipeline.ipynb  timeseries_lstm_pipeline.ipynb  timeseries_pipeline.ipynb
.streamlit/: config.toml
.venv312/: pyvenv.cfg
UML/: diagramUML.txt  diagramUML2.txt  diagramUML3.txt
catboost_floader/: main.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/: btcusdt_1m_25000_timeseries.csv  btcusdt_test.csv  btcusdt_timeseries.csv  btcusdt_train.csv  ethusdt_1m_25000_timeseries.csv  ethusdt_test.csv  ethusdt_timeseries.csv  ethusdt_train.csv  test_market_data.sqlite  test_market_data_incremental.sqlite  test_market_data_v2.sqlite
deploy/: TRACE_TESTS.md  modelline-deploy.yml  print_token.sh  reconcile.ps1  reconcile.sh  run_service_traces.py  run_service_traces.sh  set_token.sh  status.ps1
docs/: BACKDOORS_LIST.md
shared/: README.md  STRUCTURE.md  pyproject.toml
shared/modelline_shared/: __init__.py  schemas.py
shared/modelline_shared/messaging/: __init__.py  client.py  schemas.py  topics.py
(+971 files in other folders)
