[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelline-shared"
version = "0.1.0"
description = "Shared schemas, constants, and utilities across ModelLine microservices."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3.0",
    "aiokafka>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modelline_shared*"]
